--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-6 offset-3">
+  <div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
     <form (ngSubmit)="onLogin(loginForm)" #loginForm="ngForm">
       <div class="form-group">
-        <label for="username">Username (at least 4 characters)</label>
+        <label for="username">Username <span class="tip">(at least 4 characters)</span></label>
         <input
         class="form-control"
         ngModel
