--- a/src/app/message-log/message-log.component.html
+++ b/src/app/message-log/message-log.component.html
@@ -1,7 +1,8 @@
-<div class="row main-container">
+<!-- <div class="row main-container">
   <div class="col-xs-10 offset-xs-1 col-md-8 offset-md-2 message-parent">
+
     <div class="row message-log">
-      <div class="col">
+      <div class="col message-log-col">
         <div *ngFor="let message of messages" [ngClass]="message.class" class="message">
           <span class="username">{{ message.username }}</span>
           <br>
@@ -13,13 +14,11 @@
       <div class="col">
         <form (ngSubmit)="onSend(messageForm)" #messageForm="ngForm">
           <div class="form-group">
-            <textarea
-            [cdkTextareaAutosize]
+            <input
             class="form-control"
             ngModel
             name="message"
             required>
-          </textarea>
           </div>
           <button
           class="btn btn-primary"
@@ -28,5 +27,39 @@
         </form>
       </div>
     </div>
+
+  </div>
+</div> -->
+<div class="row">
+  <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 screen-container">
+		<div>
+			<h1>Chat App</h1>
+		</div>
+		<div class="scroll-wrapper">
+			<span class="scroll-bar-pusher"></span>
+			<div *ngIf="messages.length < 1" class="text-center">No new messages!</div>
+			<div class="message-log">
+				<div *ngFor="let message of messages" [ngClass]="message.class" class="message">
+					<span class="username">{{ message.username }}</span>
+					<br>
+					{{ message.message }}
+				</div>
+			</div>
+		</div>
+		<div class="chat-input">
+			<form (ngSubmit)="onSend(messageForm)" #messageForm="ngForm">
+				<div class="input-group">
+					<input
+					class="form-control"
+					ngModel
+					name="message"
+					required>
+					<button
+					class="btn btn-primary"
+					[disabled]="!messageForm.valid" type="submit">
+					Send</button>
+				</div>
+			</form>
+		</div>
   </div>
 </div>
