make sending messages in diffrent rooms and room navigation work

--- a/src/app/message-log/message-log.component.html
+++ b/src/app/message-log/message-log.component.html
@@ -1,7 +1,9 @@
 <div class="row">
   <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 screen-container">
-		<div>
-			<h1>Chat App</h1>
+		<div class="banner">
+			<span class="banner-content bcleft"><a routerLink="/rooms">Rooms</a></span>
+			<span class="banner-content title">Chat App</span>
+			<span class="banner-content bcright">{{ room }}</span>
 		</div>
 		<div class="scroll-wrapper">
 			<span class="scroll-bar-pusher"></span>
