--- a/src/app/server-list/server-list.component.html
+++ b/src/app/server-list/server-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 screen-container">
 		<div>
-			<h1 class="banner">Chat App</h1>
+			<span class="banner">Chat App</span>
 		</div>
 		<div><button class="btn btn-primary refresh" (click)="onRefresh()">Refresh</button></div>
 		<div class="server-list list-group">
